[package]
name = "comic-encoder"
version = "2.1.1"
authors = ["Clément Nerma <clement.nerma@gmail.com>"]
description = "Software for building and extracting comic archives"
edition = "2018"

[dependencies]
clap = { version = "3.1.2", features=["cargo", "derive"]}
log = "0.4.8"
fern = { version = "0.6.0", features = [ "colored" ] }
zip = "0.5.6"
pdf = "0.7"

[[bin]]
name = "comic-enc"
path = "src/main.rs"
